--- a/src/stories/Tailwind.stories.mdx
+++ b/src/stories/Tailwind.stories.mdx
@@ -1,9 +1,4 @@
-import {
-  Meta,
-  ColorPalette,
-  ColorItem,
-  Typeset,
-} from "@storybook/addon-docs/blocks";
+import { Meta, ColorPalette, ColorItem, Typeset } from "@storybook/addon-docs";
 
 import {
   accent,
